[gd_scene load_steps=2 format=3 uid="uid://biouj5xlme3uf"]

[ext_resource type="Script" path="res://Client/Scripts/welcome_menu.gd" id="1_op8xp"]

[node name="WelcomeMenu" type="Node2D"]
script = ExtResource("1_op8xp")

[node name="Node" type="Node" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="Node"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -113.5
offset_top = -20.0
offset_right = 113.5
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 350

[node name="VBoxContainer" type="VBoxContainer" parent="Node/HBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Node/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Hello, user ..."

[node name="VBoxContainer2" type="VBoxContainer" parent="Node/HBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 20

[node name="play_button" type="Button" parent="Node/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Start the game"

[node name="delete_acc_button" type="Button" parent="Node/HBoxContainer/VBoxContainer2"]
layout_mode = 2
text = "Delete account :(((("

[connection signal="pressed" from="Node/HBoxContainer/VBoxContainer2/play_button" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Node/HBoxContainer/VBoxContainer2/delete_acc_button" to="." method="_on_delete_acc_button_pressed"]
